intspasettest added and pom updated with surefire configs